# clean-agents

./: .gitignore  CHANGELOG.md  README.md  SOURCE_OF_TRUTH.md  clean-agents.skill  pyproject.toml
.claude/: CLAUDE.md
.claude/skills/clean-agents-cli/: SKILL.md
.github/workflows/: ci.yml
docs/: CLI-SPEC.md
docs/crafters/: README.md
docs/superpowers/plans/: 2026-04-21-crafters-module.md
docs/superpowers/specs/: 2026-04-21-crafters-module-design.md
evals/: evals.json
examples/: blueprint-report.html
knowledge/crafters/skill/: anti-patterns.yaml  best-practices.yaml
src/clean_agents/: __init__.py  i18n.py  telemetry.py
src/clean_agents/cli/: __init__.py  benchmark_cmd.py  blueprint_cmd.py  design_cmd.py  diff_cmd.py  export_cmd.py  harness_cmd.py  history_cmd.py  init_cmd.py  knowledge_cmd.py  main.py  marketplace_cmd.py  module_cmds.py  plugin_cmd.py  scaffold_cmd.py  shield_cmd.py  skill_cmd.py  skill_sync_cmd.py  telemetry_cmd.py
src/clean_agents/core/: agent.py  blueprint.py  config.py  versioning.py
src/clean_agents/crafters/: __init__.py  base.py  knowledge.py  renderer.py  session.py
src/clean_agents/crafters/skill/: __init__.py  ai.py  knowledge.py  scaffold.py  spec.py  validators.py
src/clean_agents/crafters/skill/templates/: README.md.j2  SKILL.md.j2  evals.json.j2  reference.md.j2
src/clean_agents/crafters/validators/: __init__.py  base.py  collision.py  runtime.py  semantic.py
src/clean_agents/engine/: recommender.py
src/clean_agents/harness/: __init__.py  benchmark.py  interceptors.py  providers.py  runtime.py
src/clean_agents/integrations/: __init__.py  anthropic.py
src/clean_agents/knowledge/: __init__.py  base.py  updater.py
src/clean_agents/modules/: __init__.py  base.py  examples.py  marketplace.py
src/clean_agents/renderers/: __init__.py  html.py  terminal.py
src/clean_agents/server/: __init__.py  api.py  auth.py  mcp_server.py
src/clean_agents/skill_assets/: SKILL.md
src/clean_agents/skill_assets/references/: compliance-mapper.md  crafters.md  eval-suite.md  load-testing.md  security-testing.md  taxonomy.md
tests/: test_ai_integration.py  test_auth.py  test_benchmark.py  test_cli.py  test_core.py  test_crafters_ai.py  test_crafters_base.py  test_crafters_blueprint_integration.py  test_crafters_cli.py  test_crafters_knowledge.py  test_crafters_renderer.py  test_crafters_runtime.py  test_crafters_session.py  test_crafters_validators_l1.py  test_crafters_validators_l2.py  test_crafters_validators_l3.py  test_diff.py  test_export.py  test_harness.py  test_i18n.py  test_knowledge.py  test_knowledge_store.py  test_marketplace.py  test_plugins.py  test_recommender.py  test_scaffold.py  test_server.py  test_skill_assets.py  test_skill_sync.py  test_telemetry.py  test_versioning.py
tests/fixtures/crafters/skill/bad-desc-too-long/: .skill-spec.yaml  SKILL.md
tests/fixtures/crafters/skill/bad-hardcoded-stats/: .skill-spec.yaml  SKILL.md
tests/fixtures/crafters/skill/bad-language-mix/: .skill-spec.yaml  SKILL.md
tests/fixtures/crafters/skill/bad-name-collision/: .skill-spec.yaml  SKILL.md
tests/fixtures/crafters/skill/good-skill/: .skill-spec.yaml  SKILL.md
tests/fixtures/crafters/skill/good-skill/references/: taxonomy.md
tests/fixtures/crafters/skill/leandro-real-skill/: .skill-spec.yaml  SKILL.md
tests/fixtures/crafters/skill/leandro-real-skill/references/: architecture-patterns.md  cost-simulator.md  migration-advisor.md  model-choosing.md  observability.md  output-templates.md  prompt-engineering.md
